chore: fix and suppresss codequality warnings